services.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 90 # Port on which the service will listen internally
      targetPort: 3000 # Port your Node.js app is listening on
  type: ClusterIP # Exposes the service only internally within the cluster
